Added MessageModel, MessageCollection, APIOpenAI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Network)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -18,6 +19,9 @@ set(PROJECT_SOURCES
         personalintelligentassistant.h personalintelligentassistant.cpp
         chat.h chat.cpp
         trayicon.h trayicon.cpp
+        apiopenai.h apiopenai.cpp
+        messagemodel.h messagemodel.cpp
+        messagecollection.h messagecollection.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
@@ -44,6 +48,7 @@ else()
 endif()
 
 target_link_libraries(PersonalIntelligentAssistant PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(PersonalIntelligentAssistant PRIVATE Qt${QT_VERSION_MAJOR}::Network)
 
 set_target_properties(PersonalIntelligentAssistant PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
